fixes bug 191220 "FTP: not entering directory, instead message box : 'Alert: 250 CWD command successful'" r=bbaetz,sr=dougt,a=asa